# vision_attack

./: README.md  background_target.py  build_dataset.py  clip_patch_experiment.py  context_completion.py  dataset.jsonl  full_dataset.jsonl  generate_mask.py  generate_removed.py  interpolation_sweep.py  m_attack.py  m_attack_combined.py  m_attack_edge.py  m_attack_h1.py  m_attack_roi.py  m_attack_sweep.py  pgd_attack.py  pgd_bg_anchor.py  pgd_patch.py  pgd_projector_target.py  pgd_v_attack.py  pgd_vlm_encoder.py  prep_dataset.py  pyproject.toml  region_token_match.py  summarize_edge.py  summarize_sweep.py  text_comparison.jsonl  v_attack.py  verify_attack.py  vlm_eval.py  vlm_eval_dataset.py  vlm_logit_loss.py
results/: background_target.txt  context_completion.txt  pgd_patch.txt  pgd_suppress.csv  pgd_target_img.csv  stats.txt  stats_control.txt  stats_removal.txt  sweep_removal.csv  verify_attack.csv  vlm_eval.json  vlm_eval.md
results/bg_anchor/: curves.csv  summary.txt
results/edge/: metrics.csv  vlm_eval.json  vlm_eval.md
results/edge_gen/: metrics.csv  vlm_eval.json
results/edge_gen_text_comparison/: metrics.csv  vlm_eval.json
results/edge_high_budget/: metrics.csv  vlm_eval.json
results/m_attack/: summary.txt  vlm_eval.json  vlm_eval.md
results/m_attack_combined/: summary.txt  vlm_eval.json  vlm_eval.md
results/m_attack_h1/: summary.txt  vlm_eval.json  vlm_eval.md
results/m_attack_roi/: summary.txt  vlm_eval.json  vlm_eval.md
results/projector_target/: summary.txt
results/region_token/: answers.csv  curves.csv  interpolation.csv  summary.csv
(+14 files in other folders)
