[project]
name = "vision-attack"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "diffusers>=0.39.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pillow>=12.3.0",
    "scipy>=1.18.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "transformers>=5.13.1",
]
